--- a/templates/login.html
+++ b/templates/login.html
@@ -84,6 +84,9 @@
                         <i class="fas fa-sign-in-alt me-2"></i>Entrar
                     </button>
                 </form>
+                <div class="text-center mt-3">
+                    <a href="{{ url_for('esqueceu_senha') }}" class="text-decoration-none">Esqueceu sua senha?</a>
+                </div>
             </div>
         </div>
     </div>
